--- a/index.css
+++ b/index.css
@@ -28,8 +28,7 @@ html {
 #branches-window{
     display: flex;
     flex-direction: row;
-    min-width: 85%;
-    min-height: 100vh;
+    min-width: 85vw;
 }
 
 /*
@@ -57,6 +56,16 @@ BRANCH WINDOWS BELOW
 
 #javascript-branch-window{
 
+}
+
+#joined-branch-window{ /*This one needs to be centered between UNH & Java Branches*/
+    position: relative;
+    min-width: 67%;
+    max-width: 67%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
 }
 
 /*
