--- a/index.css
+++ b/index.css
@@ -96,6 +96,21 @@ COUNTER WINDOW BELOW
     box-shadow: 0 0 20px rgba(255, 255, 180, 0.6);
 }
 
+#github-button{
+    height: 32px;
+    width: 32px;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    right: 0;
+    top: 0;
+    margin: 5px;
+    font-size: large;
+    font-weight: 500;
+}
+
 /*
 COUNTER WINDOW BELOW
 ####################################################################
