--- a/index.css
+++ b/index.css
@@ -2,8 +2,24 @@
     min-height: 100vh;
     min-width: 100vw;
     background-color: rgb(11, 11, 33);
-    padding : 0;
-    margin : 0;
+    margin: 0;
+    padding: 0;
+}
+
+#background-image{
+    /*https://wallpapercat.com/high-tech-wallpapers#modal*/
+    background-image: url("./resources/chip.jpg");
+    opacity: .2;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: scroll;
+    background-position: center;
+    min-width: 100vw;
+    min-height: 100%;
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: -1;
 }
 
 html {
