--- a/index.css
+++ b/index.css
@@ -175,6 +175,26 @@ COUNTER WINDOW BELOW
     transition: transform 0.2s ease, box-shadow 0.2s ease;
 }
 
+.counter-read{
+    margin: 10px;
+    margin-bottom: 25px;
+    border-radius: 10px;
+    padding: 10px;
+    background-color: yellowgreen;
+    color: black;
+    transition: transform 0.2s ease, box-shadow 0.2s ease;
+
+    border-radius: 12px;
+    box-shadow: 0 0 15px rgba(255, 255, 150, 0.4); /* glowing effect */
+    border: 1px solid rgba(255, 255, 255, 0.2); /* subtle edge */
+    transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
+
+.counter-read:hover{
+    transform: scale(1.05);
+    box-shadow: 0 0 20px rgba(255, 255, 180, 0.6);
+}
+
 .counter-complete:hover{
     transform: scale(1.05);
     box-shadow: 0 0 20px rgba(255, 255, 180, 0.6);
