--- a/index.css
+++ b/index.css
@@ -341,4 +341,9 @@ SPECIFIC ENTRY WINDOWS BELOW
     letter-spacing: 1px;
     text-align: left;
     padding: 2px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 10px;
 }
