--- a/index.css
+++ b/index.css
@@ -339,11 +339,12 @@ SPECIFIC ENTRY WINDOWS BELOW
     font-size: 18px;
     color: #ffffe4;
     letter-spacing: 1px;
-    text-align: left;
     padding: 2px;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding-bottom: 10px;
+    text-align: left;
+}
+
+.writing-container > p{
+    text-align: left;
 }
